Update all views with dark mode support and fix Playwright config

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -4,12 +4,10 @@
 
 html {
   height: 100%;
-  background-color: rgb(17 24 39);
 }
 
 body {
   height: 100%;
-  background-color: rgb(17 24 39);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -20,5 +18,4 @@ body {
 
 #app {
   min-height: 100%;
-  background-color: rgb(17 24 39);
 }
